ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int AAC_IdentPaf_Paf_GetBancoDados(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetIntegracaoPafECF(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetLinguagem(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetNome(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetRealizaLancamentoMesa(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetSistemaOperacional(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetTipoDesenvolvimento(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTipoFuncionamento(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetVersao(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_GetMD5(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_GetNome(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_SetNome(const INTPTR aacHandle, const PCHAR exePrincipal);

DllImport int AAC_IdentPaf_Paf_SetBancoDados(const INTPTR aacHandle, const PCHAR banco);

DllImport int AAC_IdentPaf_Paf_SetIntegracaoPafECF(const INTPTR aacHandle, const int tipo);

DllImport int AAC_IdentPaf_Paf_SetLinguagem(const INTPTR aacHandle, const PCHAR linguagem);

DllImport int AAC_IdentPaf_Paf_SetNome(const INTPTR aacHandle, const PCHAR nome);

DllImport int AAC_IdentPaf_Paf_SetRealizaLancamentoMesa(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetSistemaOperacional(const INTPTR aacHandle, const PCHAR sistema);

DllImport int AAC_IdentPaf_Paf_SetTipoDesenvolvimento(const INTPTR aacHandle, const int tipo);

DllImport int AAC_IdentPaf_Paf_SetTipoFuncionamento(const INTPTR aacHandle, const int tipo);

DllImport int AAC_IdentPaf_Paf_SetVersao(const INTPTR aacHandle, const PCHAR versao);