ACBrFramework/ACBrAACDll.pas


  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.DAVConfAnexoII := DAVConfAnexoII;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetRealizaLancamentoMesa(const aacHandle: PaacHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := Integer(aacHandle^.AAC.IdentPAF.Paf.RealizaLancamentoMesa);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetRealizaLancamentoMesa(const aacHandle: PaacHandle; const RealizaLancamentoMesa : Boolean) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.RealizaLancamentoMesa := RealizaLancamentoMesa;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

{%endregion}

{%region DADOS DE FUNCIONALIDADE}

Function AAC_IdentPaf_Paf_GetTipoFuncionamento(const aacHandle: PaacHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin


  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := Integer(aacHandle^.AAC.IdentPAF.Paf.TipoFuncionamento);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetTipoFuncionamento(const aacHandle: PaacHandle; const TipoFuncionamento : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.TipoFuncionamento := TACBrPAFTipoFuncionamento(TipoFuncionamento);
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetTipoDesenvolvimento(const aacHandle: PaacHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := Integer(aacHandle^.AAC.IdentPAF.Paf.TipoDesenvolvimento);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetTipoDesenvolvimento(const aacHandle: PaacHandle; const TipoDesenvolvimento : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.TipoDesenvolvimento := TACBrPAFTipoDesenvolvimento(TipoDesenvolvimento);
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetIntegracaoPafECF(const aacHandle: PaacHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := Integer(aacHandle^.AAC.IdentPAF.Paf.IntegracaoPAFECF);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetIntegracaoPafECF(const aacHandle: PaacHandle; const IntegracaoPafECF : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.IntegracaoPAFECF := TACBrPAFTipoIntegracao(IntegracaoPafECF);
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

{%endregion}

{%region DADOS DO APLICATIVO}

Function AAC_IdentPaf_Paf_GetNome(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Paf.Nome;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetNome(const aacHandle: PaacHandle; const Nome : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.Nome := Nome;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetLinguagem(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Paf.Linguagem;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetLinguagem(const aacHandle: PaacHandle; const Linguagem : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.Linguagem := Linguagem;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetBancoDados(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Paf.BancoDados;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetBancoDados(const aacHandle: PaacHandle; const BancoDados : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.BancoDados := BancoDados;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetSistemaOperacional(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Paf.SistemaOperacional;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetSistemaOperacional(const aacHandle: PaacHandle; const SistemaOperacional : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.SistemaOperacional := SistemaOperacional;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_GetVersao(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Paf.Versao;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_SetVersao(const aacHandle: PaacHandle; const Versao : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.Versao := Versao;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_PrincipalExe_GetNome(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Paf.PrincipalExe.Nome;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_PrincipalExe_SetNome(const aacHandle: PaacHandle; const NomePrincipalExe : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Paf.PrincipalExe.Nome := NomePrincipalExe;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Paf_PrincipalExe_GetMD5(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;
